--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;uid=root;pwd=andrew71;database=chatdb"
+    "DefaultConnection": ""
   },
     "Jwt": {
-      "Key": "SuaChaveSecretaAqui"
+      "Key": ""
     }
 }
