--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "server=localhost;port=3306;uid=root;pwd=andrew71;database=chatdb"
   },
     "Jwt": {
       "Key": "SuaChaveSecretaAqui"
